--- a/css/reveal-override.css
+++ b/css/reveal-override.css
@@ -1,3 +1,19 @@
 .reveal .slides {
     font-size: 0.9em;
 }
+
+.reveal .slides h2 {
+    text-align: left;
+    font-size: 1.5em;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    text-decoration: underline;
+}
+
+.reveal .slides h1 {
+    text-align: left;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.reveal .slides section {
+    text-align: left;
+}
